--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
     "db:migrate": "npx prisma migrate dev",
     "db:generate": "npx prisma generate",
     "db:studio": "npx prisma studio",
-    "db:seed": "node prisma/seed.js"
+    "db:seed": "node prisma/seed.js",
+    "build": "npx prisma generate",
+    "deploy": "npx prisma migrate deploy && npm run start"
   },
   "keywords": [
     "saude",
