--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.8.2",
+    "axios": "^1.6.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -33,7 +34,9 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^6.9.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
